Fix Chart Download Background in Dark Mode

--- a/SpigotDash/src/www/global/dark.css
+++ b/SpigotDash/src/www/global/dark.css
@@ -29,3 +29,7 @@
 .vanillatoasts-text {
     color: #969696;
 }
+
+html {
+    --theme-graphs-backcolor: #1f2424 !important;
+}
