--- a/SpigotDash/src/www/global/global.css
+++ b/SpigotDash/src/www/global/global.css
@@ -68,3 +68,7 @@
 .vanillatoasts-text {
     color: #464646;
 }
+
+html {
+    --theme-graphs-backcolor: #ffffff;
+}
